--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             
-            <a href="https://docs.google.com/spreadsheets/d/1vTK4ARbpycnDb1tQG7SN47VfOpBaeY6jDun2N0Y9dAL8l_Dp5V6jV5xVztuTAkR1XNzWauMSzJRxjQG/edit" 
+            <a href="https://docs.google.com/spreadsheets/d/14fHdmpYwbcDKiMV8XsfrusyZhpQCFxzNt7DZfMk1EFE/edit?usp=sharing" 
                target="_blank" 
                class="bg-uadyGold hover:bg-yellow-600 text-uadyBlue font-bold py-2 px-6 rounded-full shadow-md transition duration-300 flex items-center">
                 <i class="fas fa-pencil-alt mr-2"></i> Gestionar Datos (Excel)
@@ -119,4 +119,5 @@
         window.onload = loadData;
     </script>
 </body>
+
 </html>
